background issue fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,24 @@
-<div class="wraper">
+<div class="wrapper">
   <h1>Fullstack Technologies</h1>
 
-  <div class="card-wraper">
+  <div class="card-wrapper">
     <div 
       class="card" 
       [routerLink]="['javascript']" 
       routerLinkActive="active">
       JavaScript
     </div>
+     <div 
+      class="card" 
+      [routerLink]="['d3js']" 
+      routerLinkActive="active">
+      D3 Js
+    </div>
     <div 
       class="card" 
       [routerLink]="['angular']" 
       routerLinkActive="active">
       Angular
-    </div>
-    <div 
-      class="card" 
-      [routerLink]="['d3js']" 
-      routerLinkActive="active">
-      D3 Js
     </div>
     <div 
       class="card" 
