--- a/src/app/github/process/process.component.html
+++ b/src/app/github/process/process.component.html
@@ -1,4 +1,4 @@
-<div class="oveall-wraper" appMaximize #arrayMethodsConcepts="maximize"
+<div class="overall-wrapper" appMaximize #arrayMethodsConcepts="maximize"
     id="arrayMethodsConcepts">
     <div class="wrapper">
         <img class="swap"
