--- a/src/app/java-script/function/function.component.html
+++ b/src/app/java-script/function/function.component.html
@@ -1,4 +1,4 @@
-<div class="oveall-wraper" appMaximize #functionConcepts="maximize" id="functionConcepts">
+<div class="overall-wrapper" appMaximize #functionConcepts="maximize" id="functionConcepts">
     <div class="wraper">
         <img class="swap" *ngIf="functionConcepts.checkfullscreen() ==  'hide'" (click)="functionConcepts.toggle()" src="../../../assets/expand.svg" alt="">
         <img class="swap" *ngIf="functionConcepts.checkfullscreen() !=  'hide'" (click)="functionConcepts.toggle()" src="../../../assets/Minimize icon.svg" alt="">
