--- a/src/app/java-script/function/function.component.scss
+++ b/src/app/java-script/function/function.component.scss
@@ -3,7 +3,7 @@ p, h1, h2, h3, h4, h5, h6 {
     padding: 0px;
   }
   
-  .oveall-wraper {
+  .overall-wrapper {
     padding: 20px 20px 130px 20px;
     display: flex;
     flex-direction: column;
@@ -11,7 +11,6 @@ p, h1, h2, h3, h4, h5, h6 {
     background-color: #FFF;
     overflow-y: auto;
     overflow-x: hidden;
-    
     // header
     .wraper {
       width: 100%;
@@ -90,6 +89,9 @@ p, h1, h2, h3, h4, h5, h6 {
             border-radius: 8px;
             padding: 12px;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
+                      &:hover {
+            background-color: rgba(0, 255, 21, 0.15);
+          }
             
             h4 {
               margin-bottom: 10px;
