--- a/src/app/java-script/interview-js/interview-js.component.html
+++ b/src/app/java-script/interview-js/interview-js.component.html
@@ -1,4 +1,4 @@
-<div class="oveall-wraper" appMaximize #jsInterviewConcepts="maximize" id="jsInterviewConcepts">
+<div class="overall-wrapper" appMaximize #jsInterviewConcepts="maximize" id="jsInterviewConcepts">
     <div class="examples">
         <div class="wrapper">
              <h2>JavaScript Interview Questions</h2>
