--- a/src/app/sql/advanced-sql/advanced-sql.component.html
+++ b/src/app/sql/advanced-sql/advanced-sql.component.html
@@ -1,4 +1,4 @@
-<div class="oveall-wraper" appMaximize #arrayMethodsConcepts="maximize" id="arrayMethodsConcepts">
+<div class="overall-wrapper" appMaximize #arrayMethodsConcepts="maximize" id="arrayMethodsConcepts">
     <div class="examples">
   <div class="wrapper">
              <h2>JavaScript Interview Questions</h2>
