--- a/src/app/sql/data-type/data-type.component.html
+++ b/src/app/sql/data-type/data-type.component.html
@@ -1,4 +1,4 @@
-<div class="oveall-wraper" appMaximize #dataTypesTablesConcepts="maximize" id="dataTypesTablesConcepts">
+<div class="overall-wrapper" appMaximize #dataTypesTablesConcepts="maximize" id="dataTypesTablesConcepts">
     <div class="wrapper">
         <img class="swap" *ngIf="dataTypesTablesConcepts.checkfullscreen() ==  'hide'" (click)="dataTypesTablesConcepts.toggle()" src="../../../assets/expand.svg" alt="Expand">
         <img class="swap" *ngIf="dataTypesTablesConcepts.checkfullscreen() !=  'hide'" (click)="dataTypesTablesConcepts.toggle()" src="../../../assets/Minimize icon.svg" alt="Minimize">
