--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,11 +2,13 @@ p,h1,h2,h3,h4,h5,h6{
     margin: 0px;
     padding: 0px;
 }
-.wraper{
+.wrapper{
     height: 100vh;
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    background-image: url("/assets/green-paint-brush-textured-background.jpg");
+
      h1 {
             padding-bottom: 10px;
             text-align: center;
@@ -39,7 +41,7 @@ p,h1,h2,h3,h4,h5,h6{
                 background-position: 100% 100%; 
             }
         }
-    .card-wraper{ 
+    .card-wrapper{ 
         width: 100%;
         display: flex;
         justify-content: center; 
@@ -77,11 +79,11 @@ p,h1,h2,h3,h4,h5,h6{
 .modules{
     width: 100%;
     height: 90%;
-    padding-top: 10px;  
-}  
-  
-}
+    padding-top: 10px; 
+    position: relative;
 
+}
+}
 
 
 
