--- a/src/app/java-script/array-methods/array-methods.component.html
+++ b/src/app/java-script/array-methods/array-methods.component.html
@@ -1,4 +1,4 @@
-<div class="oveall-wraper" appMaximize #arrayMethodsConcepts="maximize" id="arrayMethodsConcepts">
+<div class="overall-wrapper" appMaximize #arrayMethodsConcepts="maximize" id="arrayMethodsConcepts">
     <div class="wrapper">
         <img class="swap" *ngIf="arrayMethodsConcepts.checkfullscreen() ==  'hide'" (click)="arrayMethodsConcepts.toggle()" src="../../../assets/expand.svg" alt="Expand">
         <img class="swap" *ngIf="arrayMethodsConcepts.checkfullscreen() !=  'hide'" (click)="arrayMethodsConcepts.toggle()" src="../../../assets/Minimize icon.svg" alt="Minimize">
