--- a/src/app/sql/data-type/data-type.component.scss
+++ b/src/app/sql/data-type/data-type.component.scss
@@ -3,7 +3,7 @@ p, h1, h2, h3, h4, h5, h6 {
     padding: 0px;
   }
  
-  .oveall-wraper {
+  .overall-wrapper {
     padding: 20px 20px 130px 20px;
     display: flex;
     flex-direction: column;
