--- a/src/app/d3js/d3/d3.component.html
+++ b/src/app/d3js/d3/d3.component.html
@@ -91,7 +91,7 @@
         <!-- Interview Prep Topics -->
         <button 
             class="styled" 
-            [routerLink]="['real-world-scenarios']" 
+            [routerLink]="['interview-d3']" 
             routerLinkActive="active">
             Interview-d3
         </button> 
