--- a/src/app/sql/advanced-sql/advanced-sql.component.html
+++ b/src/app/sql/advanced-sql/advanced-sql.component.html
@@ -1,7 +1,7 @@
 <div class="overall-wrapper" appMaximize #arrayMethodsConcepts="maximize" id="arrayMethodsConcepts">
     <div class="examples">
   <div class="wrapper">
-             <h2>JavaScript Interview Questions</h2>
+             <h2>SQL Interview Questions</h2>
              <img class="swap" *ngIf="arrayMethodsConcepts.checkfullscreen() == 'hide'" (click)="arrayMethodsConcepts.toggle()" src="../../../assets/expand.svg" alt="Expand">
             <img class="swap" *ngIf="arrayMethodsConcepts.checkfullscreen() != 'hide'" (click)="arrayMethodsConcepts.toggle()" src="../../../assets/Minimize icon.svg" alt="Minimize">
         </div>
