--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,7 +28,7 @@
         flex-direction: column;
         justify-content: space-evenly;
         gap: 10px;
-        padding: 20px 20px 150px 20px;
+        padding: 10px 15px 150px 15px;
         border-right: 1px solid rgba(128, 128, 128, 0.195);
         border-radius: 5px;
 
@@ -41,7 +41,7 @@
             font-size: 0.9rem;
             font-weight: bold;
             text-align: center;
-            color: #65ddf26d;
+            color: #e8eff06d;
             text-shadow: 1px 1px 1px #000;
             border-radius: 10px;
             background-color: rgba(0, 220, 213, 0.504);
@@ -86,4 +86,16 @@
   background-position: fixed;  
   // height: 71.5%;
   border-radius: 5px;
+  padding: 25px 25px 130px 20px !important;
 }
+
+ // header
+  .wrapper {
+    .header {
+      p {
+         font-size: 1rem !important;
+         line-height: 1.5rem !important;
+
+      }
+    }
+  }
