--- a/src/app/aws/deployment/deployment.component.scss
+++ b/src/app/aws/deployment/deployment.component.scss
@@ -8,15 +8,19 @@ p, h1, h2, h3, h4, h5, h6 {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    background-color: #FFF;
+    // background-color: #b21313;
     overflow-y: auto;
     overflow-x: hidden;
+
        
    // header
   .wrapper {
     display: flex;
     justify-content: start;
     position: relative;
+    background-color: #FFF;
+    border-radius: 8px;
+    padding: 10px;
 
     .header {
       width: 100%;
@@ -45,6 +49,7 @@ p, h1, h2, h3, h4, h5, h6 {
       width: 100%;
       height: auto;
       padding: 20px;
+    
 
         .header {
             text-align: center;
@@ -63,19 +68,27 @@ p, h1, h2, h3, h4, h5, h6 {
         }
 
         h2, h3, h4 {
-            color: #0f172a;
-            margin-top: 2rem;
-            border-bottom: 2px solid #e2e8f0;
-            padding-bottom: 0.3rem;
-        }
+          color: #0f172a;
+          margin-top: 2rem;
+          padding-bottom: 0.3rem;
+          padding-left: 10px;
+          border-left: 5px solid #3b82f6; // blue accent
+          font-weight: 600;
 
+        }
+         .content{
+            background-color: #fff7ed;
+            padding-top: 15px;
+            padding-bottom: 15px;
+            border-radius: 8px;
+        }
         ul, ol {
-            margin-left: 1.5rem;
+            // margin-left: 1.5rem;
             margin-bottom: 1rem;
         }
-
         li {
             margin-bottom: 0.5rem;
+            padding: 3px;
         }
 
         pre {
@@ -133,7 +146,7 @@ p, h1, h2, h3, h4, h5, h6 {
         } 
 
         .question-answers {
-  max-width: 800px;
+  max-width: 100%;
   margin: 20px auto;
   padding: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
