--- a/src/app/github/process/process.component.scss
+++ b/src/app/github/process/process.component.scss
@@ -9,7 +9,7 @@ p, h1, h2, h3, h4, h5, h6 {
     flex-direction: column;
     // width: 98%;
     gap: 20px;
-    background-color: #FFF;
+    // background-color: #FFF;
     overflow-y: auto;
     overflow-x: hidden;
        
@@ -19,6 +19,9 @@ p, h1, h2, h3, h4, h5, h6 {
     display: flex;
     justify-content: start;
     position: relative;
+    background-color: #FFF;
+    border-radius: 8px;
+    padding: 10px;
 
     .header {
       width: 100%;
@@ -68,10 +71,10 @@ p, h1, h2, h3, h4, h5, h6 {
         border-top-right-radius: 10px;
         
       .navbar-brand {
-      font-weight: 600;
-      font-size: 1.25rem;
-      color: white;
-      text-decoration: none;
+        font-weight: 600;
+        font-size: 1.25rem;
+        color: white;
+        text-decoration: none;
       
       i {
         margin-right: 0.5rem;
