--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
     </div>
     <div 
       class="card" 
-      [routerLink]="['store']" 
+      [routerLink]="['highlights-store']" 
       routerLinkActive="active">
       Highlights Store
     </div>
