--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,8 +41,7 @@
             font-size: 0.9rem;
             font-weight: bold;
             text-align: center;
-            color: #e8eff06d;
-            text-shadow: 1px 1px 1px #000;
+            color:rgb(3, 58, 100);
             border-radius: 10px;
             background-color: rgba(0, 220, 213, 0.504);
             background-image: linear-gradient(
