cronjso,sqube,notification

--- a/src/app/aws/deployment/deployment.component.scss
+++ b/src/app/aws/deployment/deployment.component.scss
@@ -4,7 +4,7 @@ p, h1, h2, h3, h4, h5, h6 {
   }
  
   .overall-wrapper{
-    padding: 20px 20px 130px 20px;
+    padding: 00px 20px 130px 20px !important;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -20,14 +20,15 @@ p, h1, h2, h3, h4, h5, h6 {
     position: relative;
     background-color: #FFF;
     border-radius: 8px;
-    padding: 10px;
+    padding: 0% !important;
 
     .header {
       width: 100%;
-      height: 100px;
+      height: 150px;
       display: flex;
       justify-content: space-evenly;
       gap: 20px;
+      padding: 15px;
       
       p {
         width: 33%;
@@ -49,6 +50,7 @@ p, h1, h2, h3, h4, h5, h6 {
       width: 100%;
       height: auto;
       padding: 20px;
+      padding-top: 0px !important;
     
 
         .header {
@@ -202,8 +204,8 @@ p, h1, h2, h3, h4, h5, h6 {
 .swap {
   cursor: pointer;;
   position: absolute;
-  top: -20px;
-  right: -20px;
+  top: -0px;
+  right: -10px;
   z-index: 10;
   background-color: #FFF;
   border-radius: 50%;
