--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,8 +8,10 @@ p,h1,h2,h3,h4,h5,h6{
     display: flex;
     flex-direction: column;
     background-image: url("/assets/green-paint-brush-textured-background.jpg");
+    font-family: 'Times New Roman', Times, serif;
 
      h1 {
+            font-family:'Times New Roman', Times, serif;
             padding-bottom: 10px;
             text-align: center;
             font-size: 3em; 
@@ -43,11 +45,12 @@ p,h1,h2,h3,h4,h5,h6{
         }
     .card-wrapper{ 
         width: 100%;
+        height: 10%;
         display: flex;
         justify-content: center; 
-        align-items: start;
+        align-items: center;
         flex-wrap: wrap;
-        gap: 20px;
+        gap: 25px;
         cursor: pointer;
         .card{
             display: flex;
@@ -55,14 +58,15 @@ p,h1,h2,h3,h4,h5,h6{
             align-items: center;
             flex-direction: column;
             background-color: aliceblue;
-            min-width: 100px;
-            height: 40px;
+            min-width: 130px;
+            height: 50px;
             border-radius: 10px;  
             padding: 10px;  
             &:hover {
                 transform: translateY(-5px);
                 box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
                 background-color: #d0e8ff;
+                font-size: bold;
            }
   
             &.active {
@@ -72,14 +76,11 @@ p,h1,h2,h3,h4,h5,h6{
             }
     }
     
-  
- 
-   
 } 
 .modules{
     width: 100%;
-    height: 90%;
-    padding-top: 10px; 
+    height: 84%;
+    padding-top: 1%;
     position: relative;
 
 }
