--- a/src/app/github/github/github.component.scss
+++ b/src/app/github/github/github.component.scss
@@ -6,10 +6,10 @@ p,h1,h2,h3,h4,h5,h6{
 .wraper{
     height: 100%;
     width: 100%;
+     padding: 0% !important;
     
     .sub-components-wraper{
         height: 100%;
-        // width: 100%;
         overflow-y: auto; 
         overflow-x: hidden; 
     }
