--- a/src/app/highlights-store/prime-ng/prime-ng.component.html
+++ b/src/app/highlights-store/prime-ng/prime-ng.component.html
@@ -1,1 +1,62 @@
-<p>prime-ng works!</p>
+<div class="overall-wrapper" appMaximize #primeNgConfig="maximize" id="primeNgConfig">
+  <div class="wrapper">
+    <img class="swap" *ngIf="primeNgConfig.checkfullscreen() == 'hide'" 
+         (click)="primeNgConfig.toggle()" src="../../../assets/expand.svg" alt="Expand">
+    <img class="swap" *ngIf="primeNgConfig.checkfullscreen() != 'hide'" 
+         (click)="primeNgConfig.toggle()" src="../../../assets/Minimize icon.svg" alt="Minimize">
+
+    <div class="header">
+      <h1>PrimeNG Config in Angular</h1>
+      <p>Step-by-step guide to configure PrimeNG in Angular standalone project</p>
+    </div>
+  </div>
+
+  <div class="examples">
+
+    <!-- Step 1 -->
+    <div class="step">
+      <h2>Step 1: Install PrimeNG</h2>
+      <pre><code>npm install primeng&#64;17 primeicons&#64;7</code></pre>
+    </div>
+
+    <!-- Step 2 -->
+    <div class="step">
+      <h2>Step 2: Add Styles (angular.json)</h2>
+      <pre><code>"styles": [
+   "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+   "node_modules/primeng/resources/primeng.min.css"
+   "src/styles.css"
+]</code></pre>
+    </div>
+
+    <!-- Step 3 -->
+    <div class="step">
+      <h2>Step 3: Configure app.config.ts</h2>
+      <pre><code>import &#123; ApplicationConfig,importProvidersFrom  &#125; from '&#64;angular/core';
+import &#123; BrowserAnimationsModule &#125; from '&#64;angular/platform-browser/animations';
+
+export const appConfig: ApplicationConfig = &#123;
+  providers: [
+        importProvidersFrom(BrowserAnimationsModule)
+   ]
+&#125;;</code></pre>
+    </div>
+
+    <!-- Step 4 -->
+    <div class="step">
+
+      <h2>Step 4: Add PrimeNG Button file.ts </h2>
+        <pre><code>import &#123; ButtonModule &#125; from 'primeng/button';
+
+imports: [ButtonModule ],
+        </code></pre>
+
+      <h2>Step 4.1: Use PrimeNG Button</h2>
+      <pre><code>&lt;p-button label="Click Me" icon="pi pi-check"&gt;&lt;/p-button&gt;</code></pre>
+
+      <h3>Output:</h3>
+      <p-button label="Click Me" icon="pi pi-check"></p-button>
+    </div>
+
+  </div>
+</div>
