--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@
   }
   
   .list{
-        height: 80%;
+        height: 100%;
         width: 20%;
         overflow-y: auto;
         display:flex;
@@ -91,6 +91,7 @@
  // header
   .wrapper {
     .header {
+      font-family: 'Times New Roman', Times, serif;
       p {
          font-size: 1rem !important;
          line-height: 1.5rem !important;
