--- a/src/app/highlights-store/highlights-store-home/highlights-store-home.component.html
+++ b/src/app/highlights-store/highlights-store-home/highlights-store-home.component.html
@@ -5,7 +5,7 @@
         class="styled" 
         [routerLink]="['logger']" 
         routerLinkActive="active">
-        Logger (Angular-firebase)(backend-Winston)
+        Logger (Angular-firebase)(NestJs-Winston)
     </button>
 
     <button 
