--- a/src/app/highlights-store/prime-ng/prime-ng.component.html
+++ b/src/app/highlights-store/prime-ng/prime-ng.component.html
@@ -16,16 +16,22 @@
     <!-- Step 1 -->
     <div class="step">
       <h2>Step 1: Install PrimeNG</h2>
-      <pre><code>npm install primeng&#64;17 primeicons&#64;7</code></pre>
+      <pre>
+<code>npm install primeng&#64;17 primeicons&#64;7
+  
+npm install primeflex</code>
+      </pre>
     </div>
 
     <!-- Step 2 -->
     <div class="step">
       <h2>Step 2: Add Styles (angular.json)</h2>
       <pre><code>"styles": [
-   "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-   "node_modules/primeng/resources/primeng.min.css"
-   "src/styles.css"
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css",
+              "src/styles.scss"
 ]</code></pre>
     </div>
 
